--- a/static/resources.html
+++ b/static/resources.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Resources | Pedro A. S. O. Neto</title>
+  <title>Análise Estatistica | Gabriel Senra</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv=“X-UA-Compatible” content=“IE=edge”>
@@ -48,10 +48,9 @@
     <div class="mobile-menu">
       <ul>
         <li><a href="#HeroBanner" class="smooth-scroll">Home</a></li>
-        <li><a href="#Gain" class="smooth-scroll">About</a></li>
-        <li><a href="#Laptop" class="smooth-scroll">Blog </a></li>
-        <li><a href="#Video" class="smooth-scroll"></a>Resources</li>
-        <li><a href="#OurWork" class="smooth-scroll">Music</a></li>
+        <li><a href="#Gain" class="smooth-scroll">Sobre mim</a></li>
+        <li><a href="#Laptop" class="smooth-scroll">Boletins Epidemiológicos</a></li>
+        <li><a href="#OurWork" class="smooth-scroll">Descrição dos dados</a></li>
       </ul>
     </div>
   </header>
@@ -61,8 +60,8 @@
   <section id="Gain">
     <div class="container">
       <div class="title text-center">
-        <h3><p style="color:#e8eef2; font-family:trebuchet ms,Verdana,verdana ref,segoe ui,Candara,lucida grande,lucida sans unicode,lucida sans,Tahoma,sans-serif; font-size:30px">RESOURCES</p></h3>
-        <p style="color:#e8eef2; font-family:trebuchet ms,Verdana,verdana ref,segoe ui,Candara,lucida grande,lucida sans unicode,lucida sans,Tahoma,sans-serif; font-size:20px">You can find most of my projects below. Also, if you want to download a full copy of my CV, click <a href="/CV.pdf">here</a>. If you want access to my social media, click the icons at the bottom of this page.<br><br>If you want to sign up for my course on Computational Musicology, click <a href="/inscricoes.html">here</a> (only Portuguese available for now). </p>
+        <h3><p style="color:#e8eef2; font-family:trebuchet ms,Verdana,verdana ref,segoe ui,Candara,lucida grande,lucida sans unicode,lucida sans,Tahoma,sans-serif; font-size:30px">Análises Estatísticas</p></h3>
+        <p style="color:#e8eef2; font-family:trebuchet ms,Verdana,verdana ref,segoe ui,Candara,lucida grande,lucida sans unicode,lucida sans,Tahoma,sans-serif; font-size:20px">Aqui você vai encontrar pesquisas que tentam responder perguntas específicas sobre a progressão do Coronavírus na região do Quadrilátero Ferrífero. </p>
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
@@ -71,8 +70,8 @@
               <i class="fa fa-chart-pie"></i>
             </div>
             <div class="icon-text">
-              <h3>Open science</h3>
-              <p><a href="/data" style= "color:#e8eef2">Click here to download the data files that I use in in my blog-posts. These were mostly done for academia, but you will also find some data science projects that I develop in my sparetime.</a></p>
+              <h3>Dados Utilizados.</h3>
+              <p><a href="/data" style= "color:#e8eef2">Clique aqui para fazer o download dos bancos de dados que foram utilizados no meu blog. Necessários para realização dos boletins e inferências estatísticas.</a></p>
               <div class="cta">
                 <a title="Read More" href="/data"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
               </div>
@@ -85,8 +84,9 @@
               <i class="fa fa-code"></i>
             </div>
             <div class="icon-text">
-              <h3>Inferential Statistics</h3>
-              <p><a href="/inferential" style= "color:#e8eef2"> Introductory scripts in R, exercises and lectures on basic concepts of hypothesis testing. Content developed during my time as TA for Introduction to Inferential Statistics.</a></p>
+              <h3>O Quadrilátero Ferrífero tem mais casos confirmados, proporcionalmente, do que o resto de Minas Gerais?</h3>
+              <p><a href="/inferential" style= "color:#e8eef2"> Aqui realizamos uma análise sobre a incedencia do virus na população do Quadrilátero comparada ao restante de Minas Gerais
+                .</a></p>
               <div class="cta">
                 <a title="Read More" href="/inferential"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
               </div>
@@ -96,11 +96,11 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
           <div class="each-icon box-3">
             <div class="icon-wrap">
-              <i class="fa fa-quote-right"></i>
+              <i class="fa fa-code"></i>
             </div>
             <div class="icon-text">
-              <h3>Publications</h3>
-              <p><a href="/publications" style= "color:#e8eef2"> Here you will find my full list of publications, both in Portuguese and in English.</a></p>
+              <h3>A letalidade do Virus em Itabira é a mesma que no resto do Quadrilátero Ferrífero? Isso pode ser um indicio de casos Falso-Positivos?</h3>
+              <p><a href="/publications" style= "color:#e8eef2"> Aqui você vai encontrar uma análise sobre a letalidade do coronavírus na Microrregião de Itabira e o impacto dos casos falso-positivos.</a></p>
               <div class="cta">
                 <a title="Read More" href="/publications"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
               </div>
@@ -110,11 +110,11 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
           <div class="each-icon box-4">
             <div class="icon-wrap">
-              <i class="fa fa-music"></i>
+              <i class="fa fa-code"></i>
             </div>
             <div class="icon-text">
-              <h3>Ear training app</h3>
-              <p><a href="/ear_training" style= "color:#e8eef2"> I developped this app for musicians who need to practice their perception of melodic intervals. Click here, start your training and get a feedback after each training session.</a></p>
+              <h3>A letalidade e a taxa de contaminação de Ouro Preto segue mesma distribuição que o resto do Quadrilátero Ferrífero?</h3>
+              <p><a href="/ear_training" style= "color:#e8eef2"> Uma análise sobre a letalidade do coronavírus na Microrregião de Ouro Preto e sua representividade na população do Quadrilátero Ferrífero.</a></p>
               <div class="cta">
                 <a title="Read More" href="/ear_training"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
               </div>
