--- a/static/analises.html
+++ b/static/analises.html
@@ -47,7 +47,7 @@
     </nav>
     <div class="mobile-menu">
       <ul>
-        <li><a href="#HeroBanner" class="smooth-scroll">Home</a></li>
+        <li><a href="https://covid-ufop.netlify.app/" class="smooth-scroll">Home</a></li>
         <li><a href="#Gain" class="smooth-scroll">Sobre mim</a></li>
         <li><a href="#Laptop" class="smooth-scroll">Boletins Epidemiológicos</a></li>
         <li><a href="#OurWork" class="smooth-scroll">Descrição dos dados</a></li>
@@ -117,6 +117,20 @@
               <p><a href="/analise_op" style= "color:#e8eef2"> Uma análise sobre a letalidade do coronavírus na Microrregião de Ouro Preto e sua representividade na população do Quadrilátero Ferrífero.</a></p>
               <div class="cta">
                 <a title="Read More" href="/analise_op"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+          <div class="each-icon box-4">
+            <div class="icon-wrap">
+              <i class="fa fa-code"></i>
+            </div>
+            <div class="icon-text">
+              <h3>Como os casos acumulados se comportam na região?</h3>
+              <p><a href="/analise_graficos" style= "color:#e8eef2"> Uma análise visual sobre o crescimento da covid-19 nas regiões com e sem atividade Mineradora.</a></p>
+              <div class="cta">
+                <a title="Read More" href="/analise_graficos"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
               </div>
             </div>
           </div>
