--- a/static/analises.html
+++ b/static/analises.html
@@ -70,10 +70,10 @@
               <i class="fa fa-chart-pie"></i>
             </div>
             <div class="icon-text">
-              <h3>Dados Utilizados.</h3>
-              <p><a href="/data" style= "color:#e8eef2">Clique aqui para fazer o download dos bancos de dados que foram utilizados no meu blog. Necessários para realização dos boletins e inferências estatísticas.</a></p>
+              <h3>Analise visual da evolução dos casos confirmados.</h3>
+              <p><a href="/analise_graficos" style= "color:#e8eef2"> Uma análise visual sobre o crescimento da covid-19 nas regiões com e sem atividade Mineradora.</a></p>
               <div class="cta">
-                <a title="Read More" href="/data"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                <a title="Read More" href="/analise_graficos"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
               </div>
             </div>
           </div>
@@ -117,20 +117,6 @@
               <p><a href="/analise_op" style= "color:#e8eef2"> Uma análise sobre a letalidade do coronavírus na Microrregião de Ouro Preto e sua representividade na população do Quadrilátero Ferrífero.</a></p>
               <div class="cta">
                 <a title="Read More" href="/analise_op"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-          <div class="each-icon box-4">
-            <div class="icon-wrap">
-              <i class="fa fa-code"></i>
-            </div>
-            <div class="icon-text">
-              <h3>Como os casos acumulados se comportam na região?</h3>
-              <p><a href="/analise_graficos" style= "color:#e8eef2"> Uma análise visual sobre o crescimento da covid-19 nas regiões com e sem atividade Mineradora.</a></p>
-              <div class="cta">
-                <a title="Read More" href="/analise_graficos"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
               </div>
             </div>
           </div>
