--- a/static/analises.html
+++ b/static/analises.html
@@ -47,10 +47,10 @@
     </nav>
     <div class="mobile-menu">
       <ul>
-        <li><a href="https://covid-ufop.netlify.app/" class="smooth-scroll">Home</a></li>
-        <li><a href="#Gain" class="smooth-scroll">Sobre mim</a></li>
-        <li><a href="#Laptop" class="smooth-scroll">Boletins Epidemiológicos</a></li>
-        <li><a href="#OurWork" class="smooth-scroll">Descrição dos dados</a></li>
+        <li><a href="https://covid-ufop.netlify.app/" class="smooth-scroll">Página inicial</a></li>
+        <li><a href="https://covid-ufop.netlify.app/sobre-mim/" class="smooth-scroll">Sobre mim</a></li>
+        <li><a href="https://covid-ufop.netlify.app/posts/" class="smooth-scroll">Boletins Epidemiológicos</a></li>
+        <li><a href="https://covid-ufop.netlify.app/descricao/" class="smooth-scroll">Descrição dos dados</a></li>
       </ul>
     </div>
   </header>
@@ -81,10 +81,10 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
           <div class="each-icon box-2">
             <div class="icon-wrap">
-              <i class="fa fa-code"></i>
+              <i class="fa fa-chart-pie"></i>
             </div>
             <div class="icon-text">
-              <h3>O Quadrilátero Ferrífero tem mais casos confirmados, proporcionalmente, do que o resto de Minas Gerais?</h3>
+              <h3>Proporcionalmente, o Quadrilátero Ferrífero tem mais casos confirmados do que o resto de Minas Gerais?</h3>
               <p><a href="/analise_quadri" style= "color:#e8eef2"> Aqui realizamos uma análise sobre a incedencia do virus na população do Quadrilátero comparada ao restante de Minas Gerais
                 .</a></p>
               <div class="cta">
@@ -96,7 +96,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
           <div class="each-icon box-3">
             <div class="icon-wrap">
-              <i class="fa fa-code"></i>
+              <i class="fa fa-chart-pie"></i>
             </div>
             <div class="icon-text">
               <h3>A letalidade do Virus em Itabira é a mesma que no resto do Quadrilátero Ferrífero? Isso pode ser um indicio de casos Falso-Positivos?</h3>
@@ -110,7 +110,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
           <div class="each-icon box-4">
             <div class="icon-wrap">
-              <i class="fa fa-code"></i>
+              <i class="fa fa-chart-pie"></i>
             </div>
             <div class="icon-text">
               <h3>A letalidade e a taxa de contaminação de Ouro Preto segue mesma distribuição que o resto do Quadrilátero Ferrífero?</h3>
