--- a/static/analises.html
+++ b/static/analises.html
@@ -48,7 +48,7 @@
     <div class="mobile-menu">
       <ul>
         <li><a href="https://covid-ufop.netlify.app/" class="smooth-scroll">Página inicial</a></li>
-        <li><a href="https://covid-ufop.netlify.app/sobre-mim/" class="smooth-scroll">Sobre mim</a></li>
+        <li><a href="https://covid-ufop.netlify.app/servicos/" class="smooth-scroll">Serviços/a></li>
         <li><a href="https://covid-ufop.netlify.app/posts/" class="smooth-scroll">Boletins Epidemiológicos</a></li>
         <li><a href="https://covid-ufop.netlify.app/descricao/" class="smooth-scroll">Descrição dos dados</a></li>
       </ul>
