--- a/static/analises.html
+++ b/static/analises.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Análise Estatistica | Gabriel Senra</title>
+  <title>Análise Estatisti | Gabriel Senra</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv=“X-UA-Compatible” content=“IE=edge”>
